After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 760648 - filename leaks in grl_registry_load_plugin_directory
filename leaks in grl_registry_load_plugin_directory
Status: RESOLVED FIXED
Product: grilo
Classification: Other
Component: core
0.3.x
Other Linux
: Normal normal
: ---
Assigned To: grilo-maint
grilo-maint
Depends on:
Blocks:
 
 
Reported: 2016-01-15 00:09 UTC by darkxst
Modified: 2016-01-15 09:46 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
core: plug leak of filename (752 bytes, patch)
2016-01-15 00:10 UTC, darkxst
committed Details | Review

Description darkxst 2016-01-15 00:09:46 UTC
==15245== 640 bytes in 5 blocks are definitely lost in loss record 2,389 of 2,425
==15245==    at 0x4C2DD9F: realloc (in /usr/lib/valgrind/vgpreload_memcheck-amd64-linux.so)
==15245==    by 0x532EC1A: g_realloc (gmem.c:159)
==15245==    by 0x534DEB8: g_string_maybe_expand (gstring.c:102)
==15245==    by 0x534E599: g_string_insert_len (gstring.c:476)
==15245==    by 0x534E911: g_string_append_len (gstring.c:620)
==15245==    by 0x5310B4A: g_build_path_va (gfileutils.c:1727)
==15245==    by 0x5310DEC: g_build_filename (gfileutils.c:1995)
==15245==    by 0x4E4B1BF: grl_registry_load_plugin_directory (grl-registry.c:1265)
==15245==    by 0x4E4B32F: grl_registry_load_all_plugins (grl-registry.c:1312)
==15245==    by 0x401292: test_setup (test_local_metadata.c:35)
==15245==    by 0x401B69: main (test_local_metadata.c:197)
Comment 1 darkxst 2016-01-15 00:10:35 UTC
Created attachment 319065 [details] [review]
core: plug leak of filename
Comment 2 Victor Toso 2016-01-15 09:45:36 UTC
Review of attachment 319065 [details] [review]:

good catch
Comment 3 Victor Toso 2016-01-15 09:46:16 UTC
Attachment 319065 [details] pushed as 586dd09 - core: plug leak of filename