core: plug leak of filename

https://bugzilla.gnome.org/show_bug.cgi?id=760648